[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/oil_barrel.gd" type="Script" id=1]
[ext_resource path="res://Models/Oil_Barrel/Oil_BarrelTextured.tscn" type="PackedScene" id=3]

[sub_resource type="CylinderShape" id=1]
radius = 0.4

[node name="oil" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="Oil_Barrel" parent="." instance=ExtResource( 3 )]

[node name="Cylinder2" parent="Oil_Barrel" index="0"]
transform = Transform( 40, 0, 0, 0, -1.74846e-06, 40, 0, -40, -1.74846e-06, 0, 1.57631, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_oil_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Oil_Barrel"]
